<resources>
    <string name="app_name">Stegano</string>
    <string name="title_encoder">Encoder</string>
    <string name="title_decoder">Decoder</string>
    <string name="title_activity_encoder">EncoderActivity</string>

    <string name="title_step_1">Step 1</string>
    <string name="title_step_2">Step 2</string>
    <string name="title_step_3">Step 3</string>

    <string name="step_continue">Continue</string>

    <string name="title_encoder_image_selection_fragment">Select image</string>
    <string name="encoder_image_selection_description">Select image from gallery or use camera to be used</string>
    <string name="encoder_image_selection_button_gallery">Existing image</string>
    <string name="encoder_image_selection_button_camera">Use camera</string>
    <string name="encoder_image_selection_button_change_image">Change image</string>

    <string name="title_encoder_message_fragment">Message</string>
    <string name="encoder_message_textarea_hint">Write message that will be hidden</string>
    <string name="encoder_message_description">Write your message that will be hidden inside the image</string>

    <string name="title_encoder_cryption_fragment">Encryption</string>
    <string name="encoder_cryption_description">Select how you want your message to be encrypted</string>
    <string name="encoder_cryption_use_cryption_switch">Use encryption</string>

    <string name="encryption_method">Encryption method</string>
    <string name="decryption_method">Decryption method</string>
    <string name="cryption_none">None</string>
    <string name="cryption_aes">AES</string>
    <string name="cryption_aes_secret">Secret</string>
    <string name="cryption_aes_guide">Secret will be used for both encryption and decryption of the message</string>
    <string name="decryption_aes_guide">Secret will be used in decryption of the message</string>
    <string name="cryption_caesar_cipher">Caesar cipher</string>
    <string name="cryption_caesar_cipher_guide">Select how much alphabets are shifted</string>
    <string name="cryption_caesar_cipher_shift_key">Shift key</string>

    <string name="encoding_success_title">Encoding was successful!</string>
    <string name="encoding_success_description">Encoded image has been saved successfully.</string>
    <string name="encoding_success_share_button">Share</string>
    <string name="encoding_success_done_button">Done</string>
    <string name="encode_success_share_image">Share image</string>

    <string name="encode_error_title">Error has occured</string>
    <string name="encode_error_image_selection">Error has occured while trying to get selected image.</string>
    <string name="encode_error_message_encryption">Error has occured while trying to encrypt message.</string>
    <string name="encode_error_get_message">Error has occured while trying to get message.</string>
    <string name="encode_error_image_encode">Error has occured while trying to encode message to image.</string>
    <string name="encode_error_image_save">Error has occured while trying to save image.</string>
    <string name="encode_error_write_permission_required">App requires write permission to work correctly!</string>

    <string name="decoder_scan">Scan</string>
    <string name="decoder_pick_image">Pick image</string>
    <string name="decoder_image_selection_button_gallery">Select image</string>
    <string name="decoder_image_selection_description">Select image that you want to scan</string>

    <string name="decoding_success_title">Decoding was successful!</string>
    <string name="decoding_success_description">Message was found from the given image:</string>
    <string name="decoding_success_decrypt_button">Decrypt</string>
    <string name="decoding_success_done_button">Done</string>

    <string name="decode_error_title">Error has occured</string>
    <string name="decode_error_image_not_selected">Error occured while trying to get selected image</string>
    <string name="decode_error_title_no_message_found">Message not found!</string>
    <string name="decode_error_no_message_found">Could not find any messages in given image. Please try another one.</string>


    <string name="cancel_alert_title">Cancellation</string>
    <string name="cancel_alert_description">Are you sure you want to delete your progress?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">Cancel</string>

    <string name="error_title_default">Error</string>
    <string name="error_description_default">Some error has occured</string>
    <string name="error_ok_default">OK</string>

    <string name="camera_permission_explanation">App requires permission to use the camera</string>
    <string name="loading_title">Scanning...</string>

    <string name="decrypt_dialog_title">Decrpytion options</string>
    <string name="decrypt_dialog_description">Select decryption method for decryption of the message</string>
    <string name="decrypt_dialog_ok_button">Decrypt</string>
    <string name="decrypt_dialog_cancel_button">Cancel</string>

    <string name="default_empty"> </string>

    <string name="send_dialog_title">Select coding method</string>
    <string name="send_dialog_encode">Encode</string>
    <string name="send_dialog_decode">Decode</string>
    <string name="send_dialog_description">Would you like to encode or decode the selected image?</string>

    <string name="custom_spinner_select_dialog_title">Please select</string>

    <string name="onboarding_skip_button">Skip</string>
    <string name="onboarding_next_button">Next</string>
    <string name="onboarding_continue_button">Start using the app</string>

    <string name="onboarding_first_title">Get started</string>
    <string name="onboarding_second_title">Hidden messages</string>
    <string name="onboarding_third_title">Share with friends</string>

    <string name="onboarding_first_content">Select whether you would like to hide message to image or check if existing image contains a hidden message.</string>
    <string name="onboarding_second_content">You can either hide encrypted messages or decrypt existing messages from images.</string>
    <string name="onboarding_third_content">Share hidden messages with your friends!</string>

    <string name="decrypt_message_info">Decrypt message if it\'s encrypted</string>
    <string name="decode_decrypt_message_title">Decrypt message</string>
    <string name="decoder_decryption_description">Select decryption method</string>
    <string name="generate">Generate</string>

    <string name="decrypted_message_label">Decrypted message:</string>
</resources>
